# promptdiff

./: .gitignore  README.md  deploy.sh
backend/: Makefile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/handler/: admin.go  auth.go  auth_google.go  billing.go  compare.go  evals.go  handler.go  models.go  settings.go  usage.go
backend/internal/middleware/: auth.go  ratelimit.go
backend/internal/model/: types.go
backend/internal/provider/: anthropic.go  google.go  openai.go  provider.go  xai.go
backend/internal/service/: billing.go  eval.go
backend/internal/store/: postgres.go  store.go
backend/internal/stripe/: client.go
backend/migrations/: 001_init.sql  002_billing.sql  003_google_auth.sql  004_email_verified.sql
docs/: 01_product_overview.md  02_personas_and_user_stories.md  03_competitive_analysis.md  04_risks_and_mitigations.md  05_mvp_scope.md  06_pricing_and_economics.md  07_dashboard_design.md  08_docs_design.md  09_launch_materials.md  10_snapreply_listing.md
frontend/: package-lock.json  package.json
frontend/public/: llms-full.txt  llms.txt
frontend/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/lib/: api.ts  utils.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/promptdiff/: __init__.py  client.py  exceptions.py  types.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: basic.ts
(+32 files in other folders)
